# aimemo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture_overview.md  emotion_brain_design.md
src/aimemo/: __init__.py  app.py
src/aimemo/api/: routes.py
src/aimemo/core/: config.py  embeddings.py  llm.py  models.py
src/aimemo/emotion/: __init__.py  analyzer.py  engine.py  models.py  policies.py  store.py
src/aimemo/engine/: memory_engine.py
src/aimemo/runtime/: __init__.py  assistant_runtime.py
src/aimemo/storage/: sqlite.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_emotion_analyzer.py  test_emotion_engine.py  test_engine.py  test_runtime.py
